fix: zooming on mobile devices

--- a/src/scss/panel.scss
+++ b/src/scss/panel.scss
@@ -1,7 +1,7 @@
 //redo in ems?
 //need to put in media queries
 .panelContainer {
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0em;
   left: 0em;
